# kaleidoscope-modern

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  KaleidoscopeJIT.h  main.cpp
src/runtime/: CMakeLists.txt  alignment_128.cpp
